fixed top align for cards and grid bg color

--- a/project1/style1.css
+++ b/project1/style1.css
@@ -1,8 +1,9 @@
 
 /*myStyle.css that is the file name and apparently this is how you make comments good to know.*/
-html, body
+body
 {
     height: 100%;
+     font-family: "josefin sans", Arial, sans-serif;
 }
 img {
 	height: 100%;
@@ -22,6 +23,8 @@ img {
 	width: 200px;
 	float: left;
 	min-height: 100%
+	font-weight: bold;
+
 }
 #nav a{
 	text-decoration: none;
@@ -74,6 +77,7 @@ ul {
 	font-family: "Trebuchet MS", Times, serif;
 	margin: 5px;
 	float: left;
+	background-color: #f4f6f9; /*this controls the color of the lower right section containing the cards why does this not float over everything and render the cards invisible? it's clearly somethign to do with the flaots but i'm just not clear... */
 }
 #hero{
 	background-color: red;
@@ -97,10 +101,10 @@ ul {
 	width: 95%;
 	height: 95%;
 	box-sizing: border-box;
-	justify-content: center;
 	display: flex;
 	flex-wrap: wrap;
-	background-color: orange;
+	background-color: orange; /*this doesn't work in what i beleive is due to the the content secion floating over it.  */
+	text-align: center;
 }
 
 .card {
@@ -112,8 +116,12 @@ ul {
 	background-color: white;
 	margin: 15px;
 	border: 3px solid gray;
-	border-top: 10px solid orange;
-	display: inline-block;
+	vertical-align: top;
+	/*border-top: 10px solid orange;*/
+	display: inline-block; /* why does inline-block work but changing it to just "inline" fucks it all up */
+	padding: 60px 5px 1px;
+	box-sizing: border-box;
+
 }
 /* on mouse-over, add a deeper shadow */
 .card:hover {
